Add task external issue references
